# rtac

./: Cargo.toml  README.md  model.mp  thomas.mp
src/: files.rs  game.rs  learning.rs  main.rs  mcts.rs  nn.rs  tictactoe.rs
