[package]
name = "rtac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
dfdx = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
rmp-serde = "1.1.0"
serde-big-array = "0.4.1"